--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bravo
+  name: docker-node-mongo
 spec:
   selector:
-    app: bravo
+    app: docker-node-mongo
   ports:
     - protocol: TCP
-      port: 8787
-      targetPort: 8787
+      port: 3000
+      targetPort: 3000
