--- a/kubernetes/mongo.yaml
+++ b/kubernetes/mongo.yaml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-claim0
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: gp2
+  resources:
+    requests:
+      storage: 1Gi
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,7 +33,13 @@ spec:
         image: mongo
         ports:
         - containerPort: 27017
-
+        volumeMounts:
+        - mountPath: /data/db
+          name: mongo-vol
+      volumes:
+      - name: mongo-vol
+        persistentVolumeClaim:
+          claimName: mongo-claim0
 ---
 
 apiVersion: v1
