--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -73,7 +73,7 @@ jobs:
        #changer le nom de yaml
       - uses: Azure/k8s-deploy@v1.3
         with:
-          namespace: 'default'
+          namespace: 'docker-node-mongo'
           manifests: |
               kubernetes/deployment.yaml
               kubernetes/mongo.yaml
