--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,3 +1,8 @@
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: docker-node-mongo
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,9 +24,7 @@ spec:
         image: tftest/mongo-app
         ports:
         - containerPort: 3000
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -33,3 +36,23 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
+---
+kind: Ingress
+apiVersion: extensions/v1beta1
+metadata:
+  name: ingress-test-apache-php
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/use-regex: 'true'
+spec:
+  tls:
+    - hosts:
+        - docker.node-mongo.com
+  rules:
+    - host: docker.node-mongo.com
+      http:
+        paths:
+          - path: /(.*)
+            backend:
+              serviceName: docker-node-mongo
+              servicePort: 3000
